# earnings_call_tone_research

./: .gitattributes  .gitignore  .gitmodules  .pylintrc  GITHUB_PAGES_SETUP.md  README.md  _config.yml  docs_README.md  generate_docs_assets.py  generate_recent_performance.py  index.md  pyproject.toml  requirements.txt  run_backtest.py  run_improved_backtest.py  setup.py
.claude/: settings.local.json
.github/workflows/: deploy-pages.yml
assets/css/: main.scss
assets/data/: metrics.json  updated_metrics.json
assets/js/: interactive.js
data/: ff5_daily.parquet  stock_prices.parquet  tone_dispersion.parquet
docs/: GITHUB_PAGES_SETUP.md  Gemfile  _config.yml  index.md  methodology.md  results.md  technical.md
docs/assets/data/: quintile_data.json
outputs/: factor_panel.parquet  weights.parquet
react-conversion/: package-lock.json  package.json
react-conversion/src/: App.jsx
react-conversion/src/components/: CodeBlock.jsx  Footer.jsx  Header.jsx  Layout.jsx  QuintileChart.jsx  SortableTable.jsx
react-conversion/src/pages/: HomePage.jsx  MethodologyPage.jsx  NotFoundPage.jsx  ResultsPage.jsx  TechnicalPage.jsx
react-tailwind-ghpages-portfolio/: README.md  package-lock.json  package.json  vite.config.js
react-tailwind-ghpages-portfolio/.github/workflows/: deploy.yml
react-tailwind-ghpages-portfolio/src/: App.jsx
react-tailwind-ghpages-portfolio/src/components/: About.jsx  Footer.jsx  (+4 more)
src/: __init__.py  factor_build.py  load.py  neutralise.py  portfolio.py  report.py
tests/: test_backtest_integration.py  test_integration.py  test_pipeline.py
(+8 files in other folders)
